# run_based_segmentation

./: Few-commands.md
catkin_ws_groundplane/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws_groundplane/devel/lib/3D-groundplane/PCD/: 0_0.pcd  1_1.pcd  1_10.pcd  1_100.pcd  1_1000.pcd  1_1001.pcd  1_1002.pcd  1_1003.pcd  1_1004.pcd  1_1005.pcd  1_1006.pcd  1_1007.pcd  1_1008.pcd  1_1009.pcd  1_101.pcd  1_1010.pcd  1_1011.pcd  1_1012.pcd  1_1013.pcd  1_1014.pcd  1_1015.pcd  1_1016.pcd  1_1017.pcd  1_1018.pcd  1_1019.pcd  1_102.pcd  1_1020.pcd  1_1021.pcd  1_1022.pcd  1_1023.pcd  1_1024.pcd  1_1025.pcd  1_1026.pcd  1_1027.pcd  1_1028.pcd  1_1029.pcd  1_103.pcd  1_1030.pcd  1_1031.pcd  1_1032.pcd  (+2351 more)
catkin_ws_groundplane/devel/lib/pkgconfig/: 3D-groundplane.pc
catkin_ws_groundplane/devel/share/3D-groundplane/cmake/: 3D-groundplaneConfig.cmake
catkin_ws_groundplane/src/3D-groundplane/: CMakeLists.txt  package.xml
catkin_ws_groundplane/src/3D-groundplane/src/: groundplanfit.cpp  scanlinerun.cpp
